# skyline

./: .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  bq-requirements.txt  dev-requirements.txt  docker-compose.yml  docs-requirements.txt  init.sh  readme.md  readthedocs.yml  requirements-torch-cpu.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
docker/: Dockerfile  docker-compose.yml  init.sh  install_environment.sh
docker_scripts/: configure.sh  configure_apache.sh  init.sh
docs/: Makefile  SNAB.rst  alert-testing.rst  alerts.rst  analyzer-optimizations.rst  analyzer.rst  anomify-cutting-edge-skyline.rst  boundary.rst  conf.py  crucible.rst  debian-and-vagrant-installation-tips.md  docker.rst  external_settings.rst  flux.rst  getting-data-into-skyline.rst  getting-started.rst  horizon.rst  index.rst  installation.rst  ionosphere.rst  ionosphere_echo.rst  ionosphere_inference.rst  ionosphere_learn_repetitive_patterns.rst  logging.rst  luminosity.rst  metric-naming.rst  mirage.rst  monitoring-skyline.rst  monotonic-metrics.rst  opentelemetry.rst  overview.rst  overview_old.rst  panorama.rst  prometheus.rst  readthedocs.requirements.txt  rebrow.rst  redis-integration.rst  releases.rst  requirements.rst  roadmap.rst  (+35 more)
etc/: otel.config.yaml.example  skyline.apache2.conf.d.example  skyline.conf  skyline.docker.apache2.conf.d.example  skyline.docker.apache2.http.conf.d.example  skyline.httpd.conf.d.example  skyline.nginx.conf.d.example  skyline_docker.conf
scripts/: install_environment.sh  load_data.py  (+2 more)
(+1306 files in other folders)
