[metadata]
description-file = readme.md

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
#addopts =
#    --cov skyline --cov-report term-missing
#    --verbose
#    -n 4

addopts =
    --verbose
